--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,8 +2,12 @@
 <html>
     <head> 
         <title> MiTRI'S EXPERIMENT </title>
+        <script src="https://unpkg.com/jspsych@8.0.0"></script>
+        <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
     </head>
-    <body>
-    
-    </body>
+    <body> </body>
+    <script>
+        const jsPsych = initJsPsych();
+        </script>
+
 </HTML>
