--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,10 +4,16 @@
         <title> MiTRI'S EXPERIMENT </title>
         <script src="https://unpkg.com/jspsych@8.0.0"></script>
         <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
+        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
     </head>
     <body> </body>
     <script>
         const jsPsych = initJsPsych();
+        const hello_trial = {
+      type: jsPsychHtmlKeyboardResponse,
+      stimulus: 'Hello world!'
+    }
+    jsPsych.run ([hello_trial ]) ;
         </script>
 
 </HTML>
