--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,22 +5,40 @@
         <script src="https://unpkg.com/jspsych@8.0.0"></script>
         <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
     </head>
     <body> </body>
     <script>
-        var x = initJsPsych();
+        const jspsych = initJsPsych();
         var sentence = {
       type: jsPsychHtmlKeyboardResponse,
       stimulus: 'I wish there was a foobly apple!', 
       trial_duration : 10000,
       choices: [' ' ]
     }
-    var sentence = {
-      type: jsPsychHtmlKeyboardResponse,
-      stimulus: 'Where is a foobly mipp?!', 
-      choices: [' ']
-    }
-    x.run ([hello_trial, hello_trial2 ]);
+    var attention = {
+      type: jsPsychSurveyText,
+  questions: [ {prompt: "Type Any one novel word from the previous sentence:"}],
+    };
+    var association = {
+      type: jsPsychSurveyText,
+  questions: [ {prompt: "foobly:"}],
+    };
+    var fixation = {
+    type: jsPsychHtmlKeyboardResponse,
+    stimulus: '+',
+    choices: ['NO_KEYS'],
+    trial_duration: 500, 
+    };
+    var image = {
+    type: jsPsychImageKeyboardResponse,
+    stimulus: 'applehorse.png',
+    choices: ['NO_KEYS'],
+    trial_duration: 500
+};
+    
+    jspsych.run ([sentence,attention,association, fixation, image]);
         </script>
 
 </HTML>
