--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -36,6 +36,8 @@
     stimulus: 'applehorse.png',
     choices: ['NO_KEYS'],
     trial_duration: 500
+    stimulus_width: 500,
+    maintain_aspect_ratio: true,
 };
     
     jspsych.run ([sentence,attention,association, fixation, image]);
