--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -50,7 +50,7 @@ var prime = {
 };
 
   
-    jspsych.run ([sentence,attention,association, fixation, image,prime]);
+    jspsych.run ([sentence,attention,association, fixation, image]);
         </script>
 
 </HTML>
