--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -33,24 +33,32 @@
     };
     var image = {
     type: jsPsychImageKeyboardResponse,
-    stimulus: 'applehorse.png',
+    stimulus: "applehorse.png",
     choices: ['NO_KEYS'],
     trial_duration: 500,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
+    prompt:"<span style = 'font-size:300%'><br><br></span>"
 };
 var prime = {
     type: jsPsychImageKeyboardResponse,
-    //  trial_duration: 300
+    //  trial_duration: 300,
     stimulus: 'applehorse.png',
-    choices: ['NO_KEYS'],
+    choices: "NO_KEYS",
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt: "<br>foobly<br>"
+    prompt:"<span style = 'font-size:200%'><br>foobly<br></span>"
+};
+var target = {
+    type: jsPsychImageKeyboardResponse,
+    stimulus: 'applehorse.png',
+    choices: ['A', 'L'],
+    stimulus_width: 500,
+    maintain_aspect_ratio: true,
+    prompt:"<span style = 'font-size:170%'>apple<br><br></span>"
 };
 
-  
-    jspsych.run ([sentence,attention,association, fixation, image]);
+    jspsych.run ([sentence,attention,association, fixation, image, prime,]);
         </script>
 
 </HTML>
