--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,24 +7,43 @@
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
         <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
         <script src="jspsych/modified-image-plugin.js"></script>
+        <script src="all_sentences.js"></script>
+        <script src="association.js"></script>
+        <script src="priming.js"></script>
     </head>
     <body> </body>
     <script>
         const jspsych = initJsPsych();
         var sentence = {
       type: jsPsychHtmlKeyboardResponse,
-      stimulus: 'I wish there was a foobly apple!', 
-      trial_duration : 10000,
-      choices: [' ' ]
-    }
+      stimulus: jspsych.timelineVariable('sentence'),
+      choices: [' '],
+      trial_duration: 10
+    };
+    var training_procedure= {
+        timeline:[sentence],
+        timeline_variables: list_of_sentences,
+        randomize_order: true,
+    };
+
     var attention = {
       type: jsPsychSurveyText,
   questions: [ {prompt: "Type Any one novel word from the previous sentence:"}],
     };
     var association = {
       type: jsPsychSurveyText,
-  questions: [ {prompt: "foobly"}],
+  questions: [ {prompt: jspsych.timelineVariable('cue')}],
     };
+    var association_procedure= {
+        timeline: [association],
+        timeline_variables: association_cues,
+        randomize_order: true,
+        repetitions: 3 
+    };
+    var training_plus_association ={
+        timeline: [training_procedure,association_procedure],
+        repetitions: 3
+    }
     var fixation = {
     type: jsPsychHtmlKeyboardResponse,
     stimulus: '+',
@@ -33,7 +52,7 @@
     };
     var image = {
     type: jsPsychImageKeyboardResponse,
-    stimulus: "applehorse.png",
+    stimulus: jspsych.timelineVariable('image_path'),
     choices: ['NO_KEYS'],
     trial_duration: 500,
     stimulus_width: 500,
@@ -43,22 +62,27 @@
 var prime = {
     type: jsPsychImageKeyboardResponse,
     //  trial_duration: 300,
-    stimulus: 'applehorse.png',
+    stimulus: jspsych.timelineVariable('image_path'),
     choices: "NO_KEYS",
+    trial_duration: 500,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt:"<span style = 'font-size:200%'><br>foobly<br></span>"
+    prompt: jspsych.timelineVariable('prime_word')
 };
 var target = {
     type: jsPsychImageKeyboardResponse,
-    stimulus: 'applehorse.png',
+    stimulus: jspsych.timelineVariable('image_path'),
+    // trial_duration: 300,
     choices: ['A', 'L'],
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt:"<span style = 'font-size:170%'>apple<br><br></span>"
+    prompt:jspsych.timelineVariable('target_word'),
 };
-
-    jspsych.run ([sentence,attention,association, fixation, image, prime,]);
+var priming_procedure = {
+  timeline:[fixation,image,prime,target],
+        timeline_variables: practice_stimuli,
+        randomize_order: true,
+};
+    jspsych.run ([training_plus_association]);
         </script>
-
 </HTML>
