--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,7 +2,7 @@
 <html>
     <head> 
         <title> MiTRI'S EXPERIMENT </title>
-        <script src="https://unpkg.com/jspsych@8.0.0"></script>
+        <script src="https://unpkg.com/jspsych@7.3.3"></script>
         <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
         <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
@@ -10,25 +10,67 @@
         <script src="all_sentences.js"></script>
         <script src="association.js"></script>
         <script src="priming.js"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-instructions@2.0.0"></script>
     </head>
     <body> </body>
     <script>
         const jspsych = initJsPsych();
+var random_attention_trials = jspsych.randomization.sampleWithoutReplacement([ ... Array (35). keys ()]. map (x => x+ 5), 3);
+console.log ("random_attention_trials =" + random_attention_trials);
+
+        var initial_instructions= {
+            type: jsPsychInstructions,
+            pages: [ 
+        'page 1 instructions ',
+     'page 2 instructions' ,
+     'page 3 instructions.'
+        ],
+        show_clickable_nav: true
+        }
+        var association_instructions= {
+            type: jsPsychInstructions,
+            pages: [ 
+        'Done with sentences. Association time.'
+        ],
+        show_clickable_nav: true
+        }
+        var priming_instructions= {
+            type: jsPsychInstructions,
+            pages: [ 
+        'Get ready for the priming task.'
+        ],
+        show_clickable_nav: true 
+        }
+
+        var sentence_number= 0; 
         var sentence = {
       type: jsPsychHtmlKeyboardResponse,
       stimulus: jspsych.timelineVariable('sentence'),
       choices: [' '],
-      trial_duration: 10
+      trial_duration: 10,
+      on_finish: function (data) {
+        sentence_number = (sentence_number +1) % 40
+        //console.log ("sentence_number=" + sentence_number);
+      }
     };
-    var training_procedure= {
-        timeline:[sentence],
-        timeline_variables: list_of_sentences,
-        randomize_order: true,
-    };
+    
 
     var attention = {
       type: jsPsychSurveyText,
   questions: [ {prompt: "Type Any one novel word from the previous sentence:"}],
+    };
+    var attention_conditional= {
+        timeline: [attention],
+        conditional_function: function(){
+            if (random_attention_trials.includes(sentence_number)) {return true;}
+            else {return false;}
+        }
+    }
+
+    var training_procedure= {
+        timeline:[sentence, attention_conditional],
+        timeline_variables: list_of_sentences,
+        randomize_order: true,
     };
     var association = {
       type: jsPsychSurveyText,
@@ -41,8 +83,14 @@
         repetitions: 3 
     };
     var training_plus_association ={
-        timeline: [training_procedure,association_procedure],
+        timeline: [training_procedure,association_instructions, association_procedure],
         repetitions: 3
+    }
+    var slow_experiment_trial = {
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: "<br> Too Slow brotha</b>! <br><br> Do better.",
+        choices: "NO_KEYS",
+        trial_duration: 1500
     }
     var fixation = {
     type: jsPsychHtmlKeyboardResponse,
@@ -67,8 +115,11 @@ var prime = {
     trial_duration: 500,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt: jspsych.timelineVariable('prime_word')
-};
+    prompt: function () {
+    return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('prime_word')) + "<br></span>";
+},
+}
+
 var target = {
     type: jsPsychImageKeyboardResponse,
     stimulus: jspsych.timelineVariable('image_path'),
@@ -76,13 +127,31 @@ var target = {
     choices: ['A', 'L'],
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt:jspsych.timelineVariable('target_word'),
-};
+    prompt:function () {
+        return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('target_word')) + "<br></span>";
+},
+}
+var priming_feedback= {
+        timeline: [slow_experiment_trial],
+        conditional_function: function(){
+            // get the data from the previous trial
+            // and check if rt is greater than 800 ms 
+            var rt = jspsych.data.get().last(1).values ()[0].rt 
+                if (rt > 800) {
+                return true;
+            }
+            else {
+                return false;
+
+            }
+        }
+}
 var priming_procedure = {
-  timeline:[fixation,image,prime,target],
+  timeline:[fixation,image,prime,target,priming_feedback],
         timeline_variables: practice_stimuli,
         randomize_order: true,
 };
-    jspsych.run ([training_plus_association]);
+    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,priming_procedure]);
+    jspsych.run([priming_procedure])
         </script>
 </HTML>
