uploaded to cognition.run

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -32,7 +32,7 @@
     }
 );
 var preload= {
-    type:jsPsyschPreload,
+    type:jsPsychPreload,
     auto_preload: true,
     images: ['horseapple.png', 'applehorse.png']
 }
