--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -18,7 +18,7 @@
         const jspsych = initJsPsych(
         {
             on_finish: function(data) {
-                jspsych.data.displayData();
+            //    jspsych.data.displayData();
             }
         }
     );
@@ -43,19 +43,21 @@ console.log ("random_attention_trials =" + random_attention_trials);
         var initial_instructions= {
             type: jsPsychInstructions,
             pages: [ 
-     'page 1 instructions ',
-     'page 2 instructions' ,
-     'page 3 instructions'
-         ], data: { 
+'How do we learn new words? <br><br>Most of the words we know we learned spontaneously, like when hearing a novel word while listening to someone speaking, watching TV or while reading.<br><br> In this study, your task will be to simply read sentences containing new words. After the reading session, we will ask you to use these novel words in a word game. <br><br>This experiment has three blocks. Each block has reading and testing session.<br><br> Are you ready to start?',
+'We will present one sentence at a time. <br><br>Read them carefully. When you are ready, press space bar for the next sentence. <br><br>In order to make sure you are reading carefully, there will be surprise questions during the reading session. <br><br>You will be asked to type in the novel words from the last sentence you read. <br><br>Minor spelling mistakes will be tolerated. Type in your answer and press enter when you are ready to move on to the next sentence.',
+'You will now read the sentences. <br> Press SPACEBAR when you have read the sentence and want to move on to the next.'
+ ], 
+ data: { 
         typeoftrial: 'instructions',
         },
         
         show_clickable_nav: true
         }
+
         var association_instructions= {
             type: jsPsychInstructions,
             pages: [ 
-        'Done with sentences. Association time.'
+        'You are done with the first part! <br><br>In this segment, you will be asked to type in the first word that comes to your mind when you hear or read a given word. <br><br>Keep in mind that in this game, you can only use the words you read about in the reading session. <br><br>Type in your answer and press enter when you are ready for the next one.'
         ],
         show_clickable_nav: true,
         data: {
@@ -65,8 +67,9 @@ console.log ("random_attention_trials =" + random_attention_trials);
         var priming_instructions= {
             type: jsPsychInstructions,
             pages: [ 
-        'Get ready for the priming task.'
-        ],
+        'This is our final game. <br><br>You will be presented with slides showing an apple and a horse. <br><br>Your task will be to respond as quickly as possible, on which side of the screen the apple or the horse is shown. <br><br>On the same screen, with pictures, two words will be presented. Read the first word, but respond in accordance with the second word. <br><br>For example, if you see words “boff” and “apple”, respond where the apple is. <br><br>If you see words “boff” and “horse”, respond where the horse is.',
+'You will press A if you want to choose the picture on the left and <br><br> L if you want to choose the picture on the right'
+],
         show_clickable_nav: true,
         data: {
             typeoftrial: 'instructions'
@@ -78,7 +81,6 @@ console.log ("random_attention_trials =" + random_attention_trials);
       type: jsPsychHtmlKeyboardResponse,
       stimulus: jspsych.timelineVariable('sentence'),
       choices: [' '],
-      trial_duration: 10,
       on_finish: function (data) {
         sentence_number = (sentence_number +1) % 40
       },
@@ -134,6 +136,7 @@ console.log ("random_attention_trials =" + random_attention_trials);
     };
     var association = {
       type: jsPsychSurveyText,
+      preamble: 'Type in the first word that comes to mind when you see the word below:',
   questions: [ {prompt: jspsych.timelineVariable('cue')}],
   data:{typeoftrial: 'association',
   cue: jspsych.timelineVariable ('cue')
@@ -155,7 +158,7 @@ console.log ("random_attention_trials =" + random_attention_trials);
     }
     var slow_experiment_trial = {
         type: jsPsychHtmlKeyboardResponse,
-        stimulus: "<br> Too Slow brotha</b>! <br><br> Do better.",
+        stimulus: "<br> Too Slow!!</b>! <br><br> Please respond quicker.",
         choices: "NO_KEYS",
         trial_duration: 1500
     }
@@ -163,7 +166,7 @@ console.log ("random_attention_trials =" + random_attention_trials);
     type: jsPsychHtmlKeyboardResponse,
     stimulus: '+',
     choices: ['NO_KEYS'],
-    trial_duration: 5, 
+    trial_duration: 500, 
     data:{typeoftrial: 'fixation'
          }
     };
@@ -171,10 +174,10 @@ console.log ("random_attention_trials =" + random_attention_trials);
     type: jsPsychImageKeyboardResponse,
     stimulus: jspsych.timelineVariable('image_path'),
     choices: ['NO_KEYS'],
-    trial_duration: 50,
+    trial_duration: 500,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
-    prompt:"<span style = 'font-size:300%'><br><br></span>",
+    prompt:"<span style = 'font-size:200%'><br><br></span>",
     data:{typeoftrial: 'image'
          }
 };
@@ -183,7 +186,7 @@ var prime = {
     //  trial_duration: 300,
     stimulus: jspsych.timelineVariable('image_path'),
     choices: "NO_KEYS",
-    trial_duration: 50,
+    trial_duration: 300,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
     prompt: function () {
@@ -199,11 +202,10 @@ var target = {
     stimulus: jspsych.timelineVariable('image_path'),
     // trial_duration: 300,
     choices: ['A', 'L'],
-    trial_duration: 50,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
     prompt:function () {
-        return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('prime_word')) + "<br></span>";
+        return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('target_word')) + "<br></span>";
 },
 data:{
     typeoftrial: 'target',
@@ -254,7 +256,7 @@ var thank_you= {
         typeoftrial: 'thank_you'
     }
 };
-    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,pratice_ procedure,priming_procedure, thank_you]);
-    jspsych.run([preload, initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you])
+    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,pratice_procedure,priming_procedure, thank_you]);
+    jspsych.run([practice_procedure,priming_procedure, thank_you])
         </script>
 </HTML>
