--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -339,7 +339,7 @@ var demographics_1 = {
 
 var timeline = [participant_race, time_of_day_alert, dominant_hand, demographics_1];
 
-    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,pratice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1]);
-    jspsych.run([initial_instructions, training_plus_association, priming_instructions,pratice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1])
+    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1]);
+    jspsych.run([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1])
         </script>
 </HTML>
