edit education question

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -262,7 +262,7 @@ var demographics = {
     questions: [
         { prompt: "1. How old are you?", name: 'age' },
         { prompt: "2. What is your gender?", name: 'gender' },
-        { prompt: "3. How many years of formal education have you had?", name: 'education_years' },
+        { prompt: "3. How many years of formal education have you had?(consider graduating high school to be 12 years)", name: 'education_years' },
         { prompt: "4. Are you of Hispanic, Latino/a/x or of Spanish origin?", name: 'hispanic_origin' }
     ],
     on_finish: function(data) {
