--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,24 +2,24 @@
 <html>
     <head> 
         <title> MITRI'S EXPERIMENT </title>
-        <script src="https://unpkg.com/jspsych@7.3.3"></script>
-        <link href="https://unpkg.com/jspsych@8.0.0/css/jspsych.css" rel="stylesheet" type="text/css" />
-        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
-        <script src="jspsych/modified-image-plugin.js"></script>
+        <script src="https://unpkg.com/jsPsych@7.3.3"></script>
+        <link href="https://unpkg.com/jsPsych@8.0.0/css/jsPsych.css" rel="stylesheet" type="text/css" />
+        <script src="https://unpkg.com/@jsPsych/plugin-html-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jsPsych/plugin-survey-text@1.1.3"></script>
+        <script src="jsPsych/modified-image-plugin.js"></script>
         <script src="all_sentences.js"></script>
         <script src="association.js"></script>
         <script src="priming.js"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-instructions@2.0.0"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-preload@2.0.0"></script>
-        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select@2.0.0"></script>
+        <script src="https://unpkg.com/@jsPsych/plugin-instructions@2.0.0"></script>
+        <script src="https://unpkg.com/@jsPsych/plugin-preload@2.0.0"></script>
+        <script src="https://unpkg.com/@jsPsych/plugin-survey-multi-select@2.0.0"></script>
     </head>
     <body> </body>
     <script>
-        const jspsych = initJsPsych(
+        const jsPsych = initJsPsych(
         {
             on_finish: function(data) {
-            //    jspsych.data.displayData();
+            //    jsPsych.data.displayData();
             }
         }
     );
@@ -28,7 +28,7 @@
     console.log("id=", id)
     // tag all trials with ID
 
-    jspsych.data.addProperties({
+    jsPsych.data.addProperties({
         ID: id
     }
 );
@@ -38,7 +38,7 @@ var preload= {
     images: ['horseapple.png', 'applehorse.png']
 }
     
-var random_attention_trials = jspsych.randomization.sampleWithoutReplacement([ ... Array (35). keys ()]. map (x => x+ 5), 3);
+var random_attention_trials = jsPsych.randomization.sampleWithoutReplacement([ ... Array (35). keys ()]. map (x => x+ 5), 3);
 console.log ("random_attention_trials =" + random_attention_trials);
 
         var initial_instructions= {
@@ -80,17 +80,17 @@ console.log ("random_attention_trials =" + random_attention_trials);
         var sentence_number= 0; 
         var sentence = {
       type: jsPsychHtmlKeyboardResponse,
-      stimulus: jspsych.timelineVariable('sentence'),
+      stimulus: jsPsych.timelineVariable('sentence'),
       choices: [' '],
       on_finish: function (data) {
         sentence_number = (sentence_number +1) % 40
       },
         data:{
             typeoftrial: 'sentence',
-        sentence: jspsych.timelineVariable( 'sentence'),
-     novel1: jspsych.timelineVariable( 'novel1'),
-     novel2: jspsych.timelineVariable( 'novel2'),
-     novel3: jspsych.timelineVariable( 'novel3')
+        sentence: jsPsych.timelineVariable( 'sentence'),
+     novel1: jsPsych.timelineVariable( 'novel1'),
+     novel2: jsPsych.timelineVariable( 'novel2'),
+     novel3: jsPsych.timelineVariable( 'novel3')
          },
     };
     
@@ -101,16 +101,16 @@ console.log ("random_attention_trials =" + random_attention_trials);
   data:{ typeoftrial: 'attention'
          },
          on_finish: function(data) {
-            var last_trial_data= jspsych.data.get().filter({typeoftrial: 'sentence'}).last(1).values()[0];
+            var last_trial_data= jsPsych.data.get().filter({typeoftrial: 'sentence'}).last(1).values()[0];
         console.log ("last_trial_data= ", last_trial_data);
         data.novel1= last_trial_data.novel1;
         data.novel2= last_trial_data.novel2;
         data.novel3= last_trial_data.novel3;
         data.response= data.response.Q0;
         if(
-            jspsych.pluginAPI.compareKeys(data.response, data.novel1) ||
-            jspsych.pluginAPI.compareKeys(data.response, data.novel2) ||
-            jspsych.pluginAPI.compareKeys(data.response, data.novel3) 
+            jsPsych.pluginAPI.compareKeys(data.response, data.novel1) ||
+            jsPsych.pluginAPI.compareKeys(data.response, data.novel2) ||
+            jsPsych.pluginAPI.compareKeys(data.response, data.novel3) 
         ){
             data.correct = 1;
             console.log ("correct=" + data.correct);
@@ -138,9 +138,9 @@ console.log ("random_attention_trials =" + random_attention_trials);
     var association = {
       type: jsPsychSurveyText,
       preamble: 'Type in the first word that comes to mind when you see the word below:',
-  questions: [ {prompt: jspsych.timelineVariable('cue')}],
+  questions: [ {prompt: jsPsych.timelineVariable('cue')}],
   data:{typeoftrial: 'association',
-  cue: jspsych.timelineVariable ('cue')
+  cue: jsPsych.timelineVariable ('cue')
     },
     on_finish: function(data) {
         data.response= data.response.Q0
@@ -173,7 +173,7 @@ console.log ("random_attention_trials =" + random_attention_trials);
     };
     var image = {
     type: jsPsychImageKeyboardResponse,
-    stimulus: jspsych.timelineVariable('image_path'),
+    stimulus: jsPsych.timelineVariable('image_path'),
     choices: ['NO_KEYS'],
     trial_duration: 500,
     stimulus_width: 500,
@@ -185,13 +185,13 @@ console.log ("random_attention_trials =" + random_attention_trials);
 var prime = {
     type: jsPsychImageKeyboardResponse,
     //  trial_duration: 300,
-    stimulus: jspsych.timelineVariable('image_path'),
+    stimulus: jsPsych.timelineVariable('image_path'),
     choices: "NO_KEYS",
     trial_duration: 300,
     stimulus_width: 500,
     maintain_aspect_ratio: true,
     prompt: function () {
-    return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('prime_word')) + "<br></span>"},
+    return "<span style= 'font-size: 200%'><br>" + String (jsPsych.timelineVariable('prime_word')) + "<br></span>"},
     data:{typeoftrial: 'prime'
          }
 };
@@ -200,25 +200,25 @@ var prime = {
 
 var target = {
     type: jsPsychImageKeyboardResponse,
-    stimulus: jspsych.timelineVariable('image_path'),
+    stimulus: jsPsych.timelineVariable('image_path'),
     // trial_duration: 300,
     choices: ['A', 'L'],
     stimulus_width: 500,
     maintain_aspect_ratio: true,
     prompt:function () {
-        return "<span style= 'font-size: 200%'><br>" + String (jspsych.timelineVariable('target_word')) + "<br></span>";
+        return "<span style= 'font-size: 200%'><br>" + String (jsPsych.timelineVariable('target_word')) + "<br></span>";
 },
 data:{
     typeoftrial: 'target',
-    target: jspsych.timelineVariable ('target_word'),
-prime: jspsych.timelineVariable( 'prime_word'),
-type: jspsych.timelineVariable( 'type'),
-relatedness: jspsych.timelineVariable( 'relatedness'),
-correct_key: jspsych.timelineVariable( 'correct_key'),
-block_number: jspsych.timelineVariable( 'block_number')
+    target: jsPsych.timelineVariable ('target_word'),
+prime: jsPsych.timelineVariable( 'prime_word'),
+type: jsPsych.timelineVariable( 'type'),
+relatedness: jsPsych.timelineVariable( 'relatedness'),
+correct_key: jsPsych.timelineVariable( 'correct_key'),
+block_number: jsPsych.timelineVariable( 'block_number')
 },
 on_finish: function(data) {
-    data.correct = jspsych.pluginAPI.compareKeys(data.response, data.correct_key)   
+    data.correct = jsPsych.pluginAPI.compareKeys(data.response, data.correct_key)   
 }
 }; 
 var priming_feedback= {
@@ -226,7 +226,7 @@ var priming_feedback= {
         conditional_function: function(){
             // get the data from the previous trial
             // and check if rt is greater than 800 ms 
-            var rt = jspsych.data.get().last(1).values ()[0].rt 
+            var rt = jsPsych.data.get().last(1).values ()[0].rt 
                 if (rt > 800) {
                 return true;
             }
@@ -285,6 +285,7 @@ var participant_race = {
             name: 'race'
         }
     ],
+    data: { tyoeoftrial: 'participant_race'},
     on_finish: function(data) {
         console.log("Racial categories selected:", data.response.race);
     }
@@ -339,7 +340,7 @@ var demographics_1 = {
 
 var timeline = [participant_race, time_of_day_alert, dominant_hand, demographics_1];
 
-    //jspsych.run ([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1]);
-    jspsych.run([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1])
+    //jsPsych.run ([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1]);
+    jsPsych.run([initial_instructions, training_plus_association, priming_instructions,practice_procedure,priming_procedure, thank_you, demographics,participant_race, time_of_day_alert, dominant_hand, demographics_1])
         </script>
 </HTML>
