--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -16,7 +16,7 @@
     </head>
     <body> </body>
     <script>
-        const jsPsych = initJsPsych(
+        const jsPsych = initJSPsych(
         {
             on_finish: function(data) {
             //    jsPsych.data.displayData();
