added new data parameters

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -285,7 +285,7 @@ var participant_race = {
             name: 'race'
         }
     ],
-    data: { tyoeoftrial: 'participant_race'},
+    data: { typeoftrial: 'participant_race'},
     on_finish: function(data) {
         console.log("Racial categories selected:", data.response.race);
     }
